--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,5 @@ dependencies = [
     "mkdocs-section-index>=0.3.10",
     "pymdown-extensions>=10.16.1",
     "mkdocs-git-revision-date-localized-plugin>=1.3.0",
-    "mkdocs-minify-plugin>=0.8.0",
-    "mkdocs-redirects>=1.2.1",
+    "mkdocs-minify-plugin>=0.8.0"
 ]
